// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSON — diagnostics > reports diagnostics for invalid JSON > invalid-json-diagnostics 1`] = `
"Diagnostics for fixtures/invalid.json (json):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;

exports[`JSON — diagnostics > reports diagnostics for valid JSON > valid-json-diagnostics 1`] = `
"Diagnostics for fixtures/valid.json (json):
0 error(s), 0 warning(s), 0 info message(s)

No issues found."
`;
